# SMC

./: README.md
API-lib/: README.md  pyproject.toml
API-lib/src/: __init__.py
API-lib/src/controllers/: document_controller.py
API-lib/src/schemas/: __init__.py  document_schemas.py
API-lib/src/smc_api_lib/: __init__.py
API-lib/src/smc_api_lib/api/: __init__.py  client.py
API-lib/src/smc_api_lib/schemas/: __init__.py  api_schemas.py
API-lib/tests/: __init__.py
SMC-package/: README.md  pyproject.toml
SMC-package/src/smc_package/: __init__.py
SMC-package/src/smc_package/methods/: Workflow_functions.py  __init__.py
SMC-package/src/smc_package/schemas/: GeneralDict.py  __init__.py
service/: .env.example  Dockerfile  README.md  pyproject.toml
service/src/: __init__.py  init.py  main.py
service/src/api/: __init__.py
service/src/api/routes/: __init__.py  document_routes.py
service/src/core/: GeneralDict.py  __init__.py  config.py
service/src/models/: __init__.py
service/src/services/: __init__.py  document_service.py
service/src/utils/: Workflow_functions.py  __init__.py
service/templates/: шаблонА.docx  шаблонРП.docx  шаблонФОС.docx
