[tool.poetry]
name = "smc-api-lib"
version = "0.1.0"
description = "Клиентская библиотека для работы с SMC сервисом"
authors = ["AleksRifel <avr-tum@mail.ru.com>"]
readme = "README.md"
packages = [{include = "smc_api_lib", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"