[tool.poetry]
name = "smc-service"
version = "1.0.0"
description = "SMC Service для генерации документов"
authors = ["AleksRifel <avr-tum@mail.ru.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"

# Локальные пакеты
smc-package = { path = "../SMC-package", develop = true }
smc-api-lib = { path = "../API-lib", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"